# ubucompilator

./: Howtoinstall.md  ProjectHome.md  acinclude.m4  config.status  configure
Ubucompilator/: .settings  FMain.form
libpantheon-0.1/: CMakeLists.txt  COPYRIGHT  INSTALL
libpantheon-0.1/debian/: README  README.source  changelog  control  copyright  files  manpage.sgml.ex  menu.ex  postinst.ex  preinst.ex  prerm.ex
libpantheon-0.1/lib/: CMakeLists.txt  config.h.cmake
libpantheon-0.1/obj-i686-linux-gnu/: Makefile
trunk/: ChangeLog  Makefile  acinclude.m4  config.status  configure  ubucompilator_0.99.dsc  ubucompilator_0.99_all.deb  ubucompilator_0.99_amd64.changes
trunk/Ubucompilator/: .project  CHANGELOG  FAbout.form  FMain.form  FUNZIP.form  Fconfig.form  Fcontrol.form  Fwaf.form  Ubucompilator.gambas
trunk/libpantheon-0.1/: AUTHORS
trunk/libpantheon-0.1/debian/: README.Debian  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  libpantheon.cron.d.ex  libpantheon.default.ex  libpantheon.doc-base.EX  manpage.1.ex  manpage.xml.ex  postrm.ex  watch.ex
trunk/libpantheon-0.1/lib/: pantheon.pc.cmake
trunk/libpantheon-0.1/obj-i686-linux-gnu/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
trunk/libpantheon-0.1/po/: CMakeLists.txt  libpantheon.pot
trunk/ubucompilator-0.99/: .project  .settings  Licenza.form  Riconoscimenti.form  Ubucompilator.gambas
trunk/ubucompilator-0.99/debian/: README  README.Debian  README.source  changelog  control  copyright  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  (+1 more)
wiki/: Howtoinstall.wiki
